feat: create zaas service, use cloud-gateway as gateway (#3568)
* rafactor: Rename Gateway to ZAAS and first clean up of ZAAS (#3567)

Signed-off-by: Pavel Jares <Pavel.Jares@broadcom.com>

* refactor: Adapt GH actions to support new ZAAS service (#3571)

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* chore: SCGW conformance migration buildable and unit tests passing (#3572)

---------

Signed-off-by: Pablo Hernán Carle <pablo.carle@broadcom.com>
Signed-off-by: Pablo Carle <pablocarle@users.noreply.github.com>
Co-authored-by: Pablo Hernán Carle <pablo.carle@broadcom.com>
Co-authored-by: Pavel Jareš <58428711+pj892031@users.noreply.github.com>

* chore: Fix and clean up the ZAAS's unit tests (#3573)

Signed-off-by: Pavel Jares <Pavel.Jares@broadcom.com>
Co-authored-by: Pablo Carle <pablocarle@users.noreply.github.com>

* chore: move GW landing page (#3574)

* Move homepage to CGW

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* fix

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* polishing

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* renaming npm scripts and polishing

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* address comments

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* address comments

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* address comments

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

---------

Signed-off-by: at670475 <andrea.tabone@broadcom.com>

* chore:  Rename gateway-service to zaas (#3576)

Signed-off-by: Pavel Jares <Pavel.Jares@broadcom.com>
Signed-off-by: Pablo Hernán Carle <pablo.carle@broadcom.com>
Co-authored-by: Pablo Hernán Carle <pablo.carle@broadcom.com>
Co-authored-by: Pablo Carle <pablocarle@users.noreply.github.com>

* chore: Rename Cloud Gateway to Gateway (#3577)

Signed-off-by: Pavel Jares <Pavel.Jares@broadcom.com>
Signed-off-by: Pablo Hernán Carle <pablo.carle@broadcom.com>
Co-authored